--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -5,26 +5,26 @@
   align-items: center;
 }
 
-.products_title {
+.products__title {
   font-size: 30px;
   line-height: 36px;
   text-align: center;
 }
 
-.products_subtitle {
+.products__subtitle {
   font-size: 14px;
   line-height: 17px;
   text-align: center;
 }
 
-.products_list {
+.products__list {
   margin: 48px 0 0 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.products_item {
+.products__item {
   width: 32%;
   min-height: 582px;
   display: flex;
@@ -41,18 +41,18 @@
   }
 }
 
-.products_item_wrapper {
+.products__wrapper {
   position: relative;
 }
 
-.products_item_wrapper:hover {
-  .products_overlay,
-  .products_addCart {
+.products__wrapper:hover {
+  .products__overlay,
+  .products__addcart {
     display: flex;
   }
 }
 
-.products_overlay {
+.products__overlay {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
@@ -61,12 +61,12 @@
   display: none;
 }
 
-.products_img {
+.products__img {
   width: 100%;
   height: auto;
 }
 
-.products_addCart {
+.products__addcart {
   position: absolute;
   width: 140px;
   display: flex;
@@ -82,16 +82,16 @@
   display: none;
 }
 
-.products_addCart:hover {
+.products__addcart:hover {
   transform: scale(1.3);
 }
 
-.products_addCart__text {
+.products__addcart-text {
   margin: 0 0 0 11px;
   align-self: center;
 }
 
-.products_card-about {
+.products__card-about {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -100,27 +100,27 @@
   min-height: 160px;
 }
 
-.products_card-title {
+.products__card-title {
   font-size: 13px;
   line-height: 16px;
 
   text-transform: uppercase;
 }
 
-.products_text {
+.products__text {
   font-weight: 300;
   font-size: 14px;
   line-height: 17px;
   color: #5d5d5d;
 }
 
-.products_price {
+.products__price {
   font-size: 16px;
   line-height: 19px;
   color: $dark-pink;
 }
 
-.products_button {
+.products__button {
   font-size: 16px;
   line-height: 19px;
   color: $dark-pink;
@@ -131,7 +131,7 @@
   margin: 10px auto 90px;
 }
 
-.products_button:hover {
+.products__button:hover {
   background-color: $dark-pink;
   color: $white;
 }
